kubernetes/apps/default/immich/ingress-traefikCRD.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: &name immich
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`immich.${SECRET_DOMAIN}`)
      middlewares:
        - name: headers
          namespace: networking
        # - name: authelia
        #   namespace: default
      services:
        - name: immich-proxy
          port: 8080
          namespace: default
